<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeatureScreens.AddTripActivity">

    <EditText
        android:id="@+id/add_trip_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/AddTripLayoutHeight"
        android:layout_marginStart="@dimen/AddTripMarginLeft"
        android:layout_marginLeft="@dimen/AddTripMarginLeft"
        android:layout_marginTop="@dimen/AddTripMarginTop"
        android:layout_marginEnd="@dimen/AddTripMarginRight"
        android:layout_marginRight="@dimen/AddTripMarginRight"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:drawablePadding="@dimen/AddTripDrawablePadding"
        android:hint="@string/TripAddName"
        android:paddingStart="@dimen/AddTripPaddingSpace"
        android:paddingLeft="@dimen/AddTripPaddingSpace"
        android:paddingRight="@dimen/AddTripPaddingSpace"
        android:textColor="@color/textColor"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/TextSize" />

    <EditText
        android:id="@+id/add_trip_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/AddTripLayoutHeight"
        android:layout_marginStart="@dimen/AddTripMarginLeft"
        android:layout_marginLeft="@dimen/AddTripMarginLeft"
        android:layout_marginTop="@dimen/AddTripMarginTop"
        android:layout_marginEnd="@dimen/AddTripMarginRight"
        android:layout_marginRight="@dimen/AddTripMarginRight"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:drawablePadding="@dimen/AddTripDrawablePadding"
        android:hint="@string/TripAddDescription"
        android:paddingStart="@dimen/AddTripPaddingSpace"
        android:paddingLeft="@dimen/AddTripPaddingSpace"
        android:paddingRight="@dimen/AddTripPaddingSpace"
        android:textColor="@color/textColor"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/TextSize" />

    <CheckBox
        android:id="@+id/add_trip_isSummerTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/AddTripMarginLeft"
        android:layout_marginLeft="@dimen/AddTripMarginLeft"
        android:layout_marginTop="@dimen/AddTripMarginLeft"
        android:text="@string/TripAddIsSummerTrip"
        android:textSize="@dimen/TextSize" />

    <CheckBox
        android:id="@+id/add_trip_isDayTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/AddTripMarginLeft"
        android:layout_marginLeft="@dimen/AddTripMarginLeft"
        android:layout_marginTop="@dimen/AddTripMarginLeft"
        android:text="@string/TripAddIsDayTrip"
        android:textSize="@dimen/TextSize" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="50dp"
        android:hint="@string/AddTripChooseLocation" />

    <Button
        android:id="@+id/uploadTripPicture"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_style"
        android:fontFamily="#ans-serif"
        android:text="@string/UploadTripPicture"
        android:textColor="@color/textColor"
        android:textSize="@dimen/TextSize"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/add_trip_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_style"
        android:fontFamily="#ans-serif"
        android:text="@string/AddTrip"
        android:textColor="@color/textColor"
        android:textSize="@dimen/TextSize"
        android:textStyle="normal|bold" />

</LinearLayout>