<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_photo"
    tools:context=".TripNTip.SignInActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/icon" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/icon"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:drawablePadding="25dp"
        android:hint="@string/EmailExample"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:textColor="@color/textColor"
        android:textCursorDrawable="@null"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:drawablePadding="25dp"
        android:hint="@string/PasswordExample"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/textColor"
        android:textSize="20sp"


        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/Password"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/Login"
        android:fontFamily="#ans-serif"
        android:text="@string/Login"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="normal|bold" />


    <TextView
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="SignUp"
        android:text="@string/SignUpFromLoginLabel"
        android:textAlignment="center"
        android:textColor="@color/signIn"
        android:textSize="20sp" />


</RelativeLayout>